--- a/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
@@ -8,7 +8,8 @@
         {{ include('@partials/welsh-switch.html.twig') }}
 
         <div role="navigation" aria-labelledby="back-link-navigation">
-            <a href="{{ path(back) }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
+            <a href="{{ path(back) }}" class="govuk-back-link"
+               id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
         </div>
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
@@ -16,13 +17,12 @@
             {{ govuk_error_summary(form) }}
 
             <div class="govuk-grid-row">
+                {{ govuk_form_open(form) }}
                 <div class="govuk-grid-column-three-quarters">
                     <h1 class="govuk-heading-xl">{% trans %}We need some more details{% endtrans %}</h1>
                     <p class="govuk-body">{% trans %}We need a few extra details to make sure we have the right LPA for your activation key request.{% endtrans %}</p>
                     <h2 class="govuk-heading-l">{% trans %}What is your current address?{% endtrans %}</h2>
                     <p class="govuk-body">{% trans %}Your activation key will be posted to this address.{% endtrans %}</p>
-
-                    {{ govuk_form_open(form) }}
 
                     {{ govuk_form_element(form.get('__csrf')) }}
 
@@ -46,14 +46,18 @@
                         'attr': { 'class': 'govuk-input govuk-!-width-two-thirds', 'autocomplete': 'address-level2'}
                     }) }}
 
-                    <h2 class="govuk-heading-l">{% trans %}Is this the same address as your address on the paper LPA?{% endtrans %}</h2>
-
-                    {% set value_yes =  constant('Actor\\Workflow\\RequestActivationKey::ACTOR_ADDRESS_SELECTION_YES')  %}
-                    {% set value_no =  constant('Actor\\Workflow\\RequestActivationKey::ACTOR_ADDRESS_SELECTION_NO')  %}
-                    {% set value_not_sure =  constant('Actor\\Workflow\\RequestActivationKey::ACTOR_ADDRESS_SELECTION_NOT_SURE')  %}
+                    {% set value_yes =  constant('Actor\\Workflow\\RequestActivationKey::ACTOR_ADDRESS_SELECTION_YES') %}
+                    {% set value_no =  constant('Actor\\Workflow\\RequestActivationKey::ACTOR_ADDRESS_SELECTION_NO') %}
+                    {% set value_not_sure =  constant('Actor\\Workflow\\RequestActivationKey::ACTOR_ADDRESS_SELECTION_NOT_SURE') %}
 
                     <div class="govuk-form-group">
                         <fieldset class="govuk-fieldset">
+
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                                <h2 class="govuk-fieldset__heading">
+                                    {% trans %}Is this the same address as your address on the paper LPA?{% endtrans %}
+                                </h2>
+                            </legend>
 
                             {{ govuk_form_element(form.get('actor_address_check_radio'), {'value_options':
                                 [
@@ -70,12 +74,13 @@
                                         'value': value_not_sure
                                     }
                                 ]}
-                            )}}
+                            ) }}
 
                         </fieldset>
                     </div>
 
-                    <button data-prevent-double-click="true" type="submit" class="govuk-button">{% trans %}Continue{% endtrans %}</button>
+                    <button data-prevent-double-click="true" type="submit"
+                            class="govuk-button">{% trans %}Continue{% endtrans %}</button>
 
                     {{ govuk_form_close() }}
 
