UML-2309: DAC fix to add legend headings (#1630)
* dac fix to add legend headings

* line breaks fixed

* heading sizes corrected

--- a/service-front/app/src/Actor/templates/actor/request-activation-key/actor-role.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/actor-role.html.twig
@@ -9,7 +9,8 @@
         {{ include('@partials/welsh-switch.html.twig') }}
 
         <div role="navigation" aria-labelledby="back-link-navigation">
-            <a href="{{ path(back) }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
+            <a href="{{ path(back) }}" class="govuk-back-link"
+               id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
         </div>
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
@@ -17,16 +18,18 @@
             {{ govuk_error_summary(form) }}
 
             <div class="govuk-grid-row">
+                {{ govuk_form_open(form) }}
                 <div class="govuk-grid-column-two-thirds">
-
-                    <h1 class="govuk-heading-xl">{% trans %}What is your role on the LPA?{% endtrans %}</h1>
-
-                    {{ govuk_form_open(form) }}
 
                     {{ govuk_form_element(form.get('__csrf')) }}
 
                     <div class="govuk-form-group">
                         <fieldset class="govuk-fieldset">
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+                                <h1 class="govuk-fieldset__heading">
+                                    {% trans %}What is your role on the LPA?{% endtrans %}
+                                </h1>
+                            </legend>
 
                             {{ govuk_form_element(form.get('actor_role_radio'), {'value_options':
                                 [
@@ -41,11 +44,12 @@
                                         'value': 'Attorney'
                                     }
                                 ]}
-                            )}}
-
+                            ) }}
                         </fieldset>
                     </div>
-                    <button data-prevent-double-click="true" type="submit" class="govuk-button">{% trans %}Continue{% endtrans %}</button>
+
+                    <button data-prevent-double-click="true" type="submit"
+                            class="govuk-button">{% trans %}Continue{% endtrans %}</button>
                     {{ govuk_form_close() }}
                 </div>
             </div>
