--- a/service-front/app/src/Actor/templates/actor/partials/new-use-service.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/new-use-service.html.twig
@@ -3,7 +3,8 @@
         <div class="govuk-grid-column-two-thirds">
             <p class="govuk-body">
                 {% trans with {'{link}': 'https://eu.surveymonkey.com/r/UseLPA'} %}
-                    Your <a class="govuk-link" href="{link}" target="_blank">feedback</a> will help us to improve
+                    Your <a class="govuk-link" href="{link}" target="_blank">feedback<span
+                            class="govuk-visually-hidden">(opens in new tab)</span></a> will help us to improve
                 {% endtrans %}
             </p>
         </div>
