--- a/service-front/app/src/Actor/templates/actor/lpa-create-viewercode.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-create-viewercode.html.twig
@@ -61,8 +61,9 @@
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
                             <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
-                            {% trans %}This is a new service, check that the organisation will accept an online summary of the
-                                <abbr title="lasting power of attorney">LPA</abbr> and how they want to receive the access code you make for them.{% endtrans %}
+                            {% trans %}
+                                This is a new service, check that the organisation will accept an online summary of the<abbr title="lasting power of attorney">LPA</abbr> and how they want to receive the access code you make for them.
+                            {% endtrans %}
                         </strong>
                     </div>
 
