content update with welsh

--- a/service-front/app/src/Actor/templates/actor/home-page.html.twig
+++ b/service-front/app/src/Actor/templates/actor/home-page.html.twig
@@ -49,7 +49,7 @@
                     {% if feature_enabled('allow_older_lpas') %}
                         <p class="govuk-inset-text">
                             {% trans %}
-                                Adding LPAs registered between 1 January 2016 and 31 August 2019 is on a trial basis only, and may be paused temporarily. However, once your LPA is added you will always be able to use it in this service.
+                                Adding LPAs registered between 1 January 2016 and 31 August 2019 is on a trial basis only, and may be paused temporarily. However, once you've requested an activation key for an LPA, you'll always be able to use the LPA on this service.
                             {% endtrans %}
                         </p>
                     {% endif %}
