Fixes to twig template and css tweaks to improve accessibility.

--- a/service-front/web/src/scss/_translation-switch.scss
+++ b/service-front/web/src/scss/_translation-switch.scss
@@ -1,14 +1,19 @@
 .trans-switch {
   overflow: auto;
   display: inline;
+
   &__list {
     display: inline;
-  }
 
-  &__partition {
-    display: inline;
-    margin-right: 10px;
-    margin-left: 10px;
+    &:after {
+      padding: 0 5px;
+      content: " | ";
+    }
+
+    &:last-child:after {
+      padding-right: 0;
+      content: none;
+    }
   }
 
   &__container {
