Use "aside" as recommended by the aXe tool

--- a/service-front/app/src/Actor/templates/actor/partials/new-use-service.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/new-use-service.html.twig
@@ -1,5 +1,5 @@
 {{ include('@partials/section-break.html.twig') }}
-<div class="govuk-grid-row">
+<aside class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body">
             {% trans with {'{link}': 'https://eu.surveymonkey.com/r/UseLPA'} %}
@@ -7,4 +7,4 @@
             {% endtrans %}
         </p>
     </div>
-</div>
+</aside>
