--- a/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
+++ b/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
@@ -4,6 +4,7 @@
 
 {% block content %}
     <div class="govuk-width-container">
+        {{ include('@partials/account-bar.html.twig') }}
         {{ include('@partials/welsh-switch.html.twig') }}
 
         <div role="navigation" aria-labelledby="back-link-navigation">
