--- a/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
+++ b/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
@@ -4,6 +4,7 @@
 
 {% block content %}
     <div class="govuk-width-container">
+        {{ include('@partials/account-bar.html.twig') }}
         {{ include('@partials/welsh-switch.html.twig') }}
 
         <div role="navigation" aria-labelledby="back-link-navigation">
@@ -21,7 +22,7 @@
 
                 <div class="govuk-grid-column-two-thirds">
                         <p class="govuk-body">{% trans %}If an <abbr title="lasting power of attorney">LPA</abbr> has instructions or preferences we cannot show these online. Organisations might ask to see the paper <abbr title="lasting power of attorney">LPA</abbr> so that they can read the instructions and preferences.{% endtrans %}</p>
-                        <p class="govuk-body">{% trans %}In some older LPA's, instructions and preferences are called 'restrictions and conditions'.{% endtrans %}</p>
+                        <p class="govuk-body">{% trans %}In some older LPAs, instructions and preferences are called 'restrictions and conditions'.{% endtrans %}</p>
                 </div>
             </div>
         </main>
