--- a/service-front/app/src/Common/templates/partials/welsh-switch.html.twig
+++ b/service-front/app/src/Common/templates/partials/welsh-switch.html.twig
@@ -1,6 +1,6 @@
 {% set route_name = get_route_name() %}
 
-<ul class="trans-switch" id="language-switch" role="navigation" aria-label="Change your language">
+<ul class="trans-switch" id="language-switch" aria-label="Change your language">
     <li class="govuk-list trans-switch__list govuk-body-s" id="language-switch-en" lang="en-gb">
         {% if path() matches '/(^\\/cy.*)/' %}
             {% if actorToken is defined and actorToken != 'null' %}
