Fixes to twig template and css tweaks to improve accessibility. (#1697)
* Fixes to twig template and css tweaks to improve accessibility.

* Use "aside" as recommended by the aXe tool

* Review tweaks.

* Remove aria attribute from UL

--- a/service-front/web/src/scss/_translation-switch.scss
+++ b/service-front/web/src/scss/_translation-switch.scss
@@ -1,17 +1,17 @@
 .trans-switch {
-  overflow: auto;
-  display: inline;
+  float: right;
+
   &__list {
     display: inline;
-  }
 
-  &__partition {
-    display: inline;
-    margin-right: 10px;
-    margin-left: 10px;
-  }
+    &:after {
+      padding: 0 5px;
+      content: " | ";
+    }
 
-  &__container {
-    float: right;
+    &:last-child:after {
+      padding-right: 0;
+      content: none;
+    }
   }
 }
