Uml 2250 get activation key from codes repo (#1739)
* log potential signing error

* hex encode shahash

* create json from string

* create json correctly

* add json header

* add details to partial

* Use common configuration for both dynamo and getting credentials

* fix template and add connection to local codes table when running locally

* Give partial a activation key rather than all the fields inside separately

* make activation key a pointer so it can be nil when not there

* replace credentials with conifg so the credentials do not expire

* fix missed credential change to config

* Update service-admin/.vscode/launch.json

--- a/service-admin/web/templates/result_code.partial.gohtml
+++ b/service-admin/web/templates/result_code.partial.gohtml
@@ -11,19 +11,6 @@
 
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        Date Used
-      </dt>
-      <dd class="govuk-summary-list__value">
-        {{ if .DateTime }}
-          {{ .DateTime | readableDateTime }}
-        {{ else }}
-          N/A
-        {{ end }}
-      </dd>
-    </div>
-
-    <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">
         LPA
       </dt>
       <dd class="govuk-summary-list__value">
@@ -31,6 +18,7 @@
       </dd>
     </div>
 
+    {{ if .Email }}
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
         Email
@@ -39,5 +27,37 @@
           {{ .Email }}
       </dd>
     </div>
+    {{ end }}
+
+    {{ if .ActivationKey }}
+
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Status
+      </dt>
+      <dd class="govuk-summary-list__value">
+          {{ .ActivationKey.StatusDetails }}
+      </dd>
+    </div>
+
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Generated
+      </dt>
+      <dd class="govuk-summary-list__value">
+          {{ .ActivationKey.GeneratedDate | readableDateTime }}
+      </dd>
+    </div>
+
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Last Updated
+      </dt>
+      <dd class="govuk-summary-list__value">
+          {{ .ActivationKey.LastUpdatedDate | readableDateTime }}
+      </dd>
+    </div>
+
+    {{ end }}
   </dl>
 {{ end }}
