Changes to show unsure on check answer page when user is unsure whether address on LPA matches that in current address

--- a/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
@@ -43,7 +43,7 @@
                                     {% endif %}
                                 </dd>
                                 <dd class="govuk-summary-list__actions">
-                                    <a class="govuk-link" id="change-address-on-paper" href="{{ data.address_on_paper is defined ? path('lpa.add.address-on-paper') : path('lpa.add.actor-address') }}">
+                                    <a class="govuk-link" id="change-address-on-paper" href="{{ data.actor_address_response == 'No' ? path('lpa.add.address-on-paper') : path('lpa.add.actor-address') }}">
                                         {% if data.address_on_paper is defined %}
                                             {% trans %}Change<span class="govuk-visually-hidden"> address on paper LPA</span>{% endtrans %}
                                         {% else %}
