--- a/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
@@ -36,7 +36,9 @@
                                     {% trans %}Address on paper LPA{% endtrans %}
                                 </dt>
                                 <dd class="govuk-summary-list__value">
-                                    {%  if data.address_on_paper is defined %}
+                                    {% if data.actor_address_response is defined %}
+                                        {% trans %}Not sure{% endtrans %}
+                                    {% elseif data.address_on_paper is defined %}
                                         <pre class="govuk-body">{{ data.address_on_paper }}</pre>
                                     {% else %}
                                         {% trans %}Same as above{% endtrans %}
