LPAs row name to Added By

--- a/service-admin/web/templates/result_lpa.partial.gohtml
+++ b/service-admin/web/templates/result_lpa.partial.gohtml
@@ -12,7 +12,7 @@
     {{ if .AddedBy }}
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        LPAs
+        Added by
       </dt>
       <dd class="govuk-summary-list__value">
         <ul class="govuk-list">
