alter hint to include lpa number

--- a/service-admin/web/templates/search.page.gohtml
+++ b/service-admin/web/templates/search.page.gohtml
@@ -14,7 +14,7 @@
           </h1>
 
           <div id="search-hint" class="govuk-hint moj-search__hint">
-            You can search by email address or activation key
+            You can search by email address, activation key or LPA number
           </div>
 
           {{ if .Errors.Query }}
